[package]
name = "assert-tokenstreams-eq"
version = "0.1.0"
edition = "2024"
authors = ["Robin Ohs <me@robinohs.dev>"]
repository = "https://github.com/robinohs/assert-tokenstreams-eq"
keywords = ["tokenstream", "testing", "macro-helper", "test"]
categories = [
    "development-tools::procedural-macro-helpers",
    "development-tools::testing",
    "development-tools",
]
description = "A utility for comparing token streams: applies rustfmt for consistent formatting and leverages pretty_assertions to clearly visualize differences."
license = "MIT OR Apache-2.0"
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
thiserror = "2"
pretty_assertions = "1"

[dev-dependencies]
quote = "1"
